[gd_scene load_steps=2 format=3 uid="uid://chghecj8e3p2x"]

[ext_resource type="Script" path="res://scripts/room_creation.gd" id="1_p56v7"]

[node name="room_creation" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 1151.0
offset_bottom = 643.0
script = ExtResource("1_p56v7")

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 47.0
offset_top = 3.0
offset_right = 174.0
offset_bottom = 34.0
text = "Main Menu"

[node name="LobbyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 347.0
offset_top = 161.0
offset_right = 834.0
offset_bottom = 539.0
alignment = 1

[node name="HostJoinContainer" type="HBoxContainer" parent="LobbyContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="LobbyContainer/HostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Room"

[node name="JoinButton" type="Button" parent="LobbyContainer/HostJoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Room"

[node name="RoomCodeContainer" type="HBoxContainer" parent="LobbyContainer"]
layout_mode = 2
alignment = 1

[node name="RoomCode" type="LineEdit" parent="LobbyContainer/RoomCodeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CopyConnectButton" type="Button" parent="LobbyContainer/RoomCodeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy"

[node name="LobbyInfoContainer" type="HBoxContainer" parent="LobbyContainer"]
layout_mode = 2

[node name="LobbyList" type="ItemList" parent="LobbyContainer/LobbyInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyContainer/LobbyInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckSelectButton" type="OptionButton" parent="LobbyContainer/LobbyInfoContainer/VBoxContainer"]
layout_mode = 2

[node name="ReadyStartButton" type="Button" parent="LobbyContainer/LobbyInfoContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="CancelButton" type="Button" parent="LobbyContainer/LobbyInfoContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"
